# Django-app

./: README.md  pyproject.toml
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_author_user_quote_user_tag_user_tag_tag of username.py
quotes/quotesapp/templates/quotesapp/: author.html  base.html  detail.html  index.html  quote.html
quotes/users/: forms.py  models.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  profile.html  signup.html
